Implement connexion with Swagger
